# SPKRasp

./: README.md  __init__.py  main.py  pyproject.toml
assets/: __init__.py
assets/SPKRasp/: spkrasp.py
assets/info/: current_rasp.xlsx
assets/parser/: parser.py
